css/style.css
/* Stylesheet */

/*html {
    height: 100vh;
    width: 100vw;
}*/

article {
    text-align: center;
    width: 100%;
    max-width: 400px;
}

.text {
    font-size: 60px;
    text-align: center;
    margin: 15%;
    height: 75%;
    max-height: 350px;
    overflow: scroll;
    color: rgb(80, 80, 80);
}

.click, .go {
    display: inline-block;
}

.click {
    visibility: hidden;
    font-size: 40px;
    background-color: rgb(126, 236, 255);
    border: 1px solid black;
    padding: 10px;
    border-radius: 15px;
    width: 80%;
    color: white;
}

.inst {
    font-size: 30px;
    color: rgb(126, 236, 255);
    /*background-color: red;*/
    margin-left: 10%;
    margin-right: 10%;
}

.go, .reset {
    position: fixed;
    left: 150px;
    bottom: 150px;
    border: 1px solid black;
    font-size: 30px;
    padding: 30px;
    border-radius: 50%;
    color: rgb(126, 236, 255);
    background-color: white;
}

@media only screen and (max-width: 425px) { /* On mobile, button = tied to bottom right corner */
    .go, .reset {
        position: fixed;
        right: 15px;
        bottom: 15px;
}


img {
    height: 50px;
    position: relative;
    top: 3px;
    left: 1.5px;
}

